# azure-slack-alert

./: .funcignore  Cargo.toml  host.json  local.settings.json
src/: alerts.rs  html.rs  main.rs
