[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
axum = "0.5.15"
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
